--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -27,6 +28,11 @@
 .App-link {
   color: #61dafb;
 }
+
+.MuiButton-containedSecondary {
+  background-color: #213629;
+}
+
 
 @keyframes App-logo-spin {
   from {
