--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -4,8 +4,8 @@
 }
 
 .App-header {
-  background-color: #333357;
-  min-height: 30vh;
+  background-color: white;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
